<resources>
    <string name="app_name">SporTec</string>
    <string name="not_fire_auth">No se autentifico con Firebase</string>
    <string name="not_init_sign">No se inicio secion</string>

    <string name="selected">Selección</string>
    <string name="description_selected">Seleccione los deportes favoritos, puede cambiar esta elección despues.</string>
    <string name="title_activity_noticias">Noticias</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_spor_tec">MenuSporTec</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="password">password</string>
    <string name="password_tv">Password:</string>
    <string name="correo">correo</string>
    <string name="correo_tv">Correo:</string>
    <string name="nombre_y_apellidos">Nombre y apellidos</string>
    <string name="registrar">Registrar</string>
</resources>
