<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegistrar"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_nombre_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/nombre_y_apellidos"
        android:textSize="25dp" />
    <EditText
        android:id="@+id/et_nombre_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:hint="Nombre y apellidos" />


    <TextView
        android:id="@+id/tv_correo_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/correo_tv"
        android:textSize="25dp" />
    <EditText
        android:id="@+id/et_correo_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:hint="Correo" />


    <TextView
        android:id="@+id/tv_password_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:text="@string/password_tv"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/et_password_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:hint="Password"/>
    <Button
        android:id="@+id/bt_inicio_sesion_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"/>

</LinearLayout>